fixed contact footer, webminer css issue on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,7 @@ html{
     position: relative;
     margin: 10% auto 0;
     width: 85%;
-    height: 470px;
+    height: 490px;
     background: linear-gradient(0deg, #121112, rgb(44, 43, 43));
 }
 
